--- a/src/shorty/templates/index.html
+++ b/src/shorty/templates/index.html
@@ -14,7 +14,7 @@
 </div>
 
 <div class="container">
-    <form action="/shortlinks" method="POST">
+    <form action="/ui-shortlinks" method="POST">
 
         <div class="mb-3">
             <label for="url" class="form-label">URL to shorten</label><br>
